# meta-planner

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.jsx  page.jsx
app/(portal)/: layout.jsx
app/(portal)/dashboard/: page.jsx
app/(portal)/quotes/: loading.jsx  page.jsx
app/(site)/: layout.jsx  page.jsx
app/(site)/login/: page.jsx
app/api/stripe/: route.js
app/dashboard/: page.jsx
app/login/: page.jsx
app/register/: page.jsx
components/: account-card.jsx  auth-buttons.jsx  dash-card.jsx  dynamic-cn.jsx  edit-metrics-drawer.jsx  edit-metrics-model.jsx  edit-quotes.jsx  footer.jsx  header.jsx  headline.jsx  hero.jsx  info-row.jsx  login-form.jsx  mobile-nav.jsx  nav.jsx  portal-header.jsx  portal-mobile-nav.jsx  quote-card.jsx  quotes-route-button.jsx  quotes-rpc.jsx  quotes-streaming.jsx  sidebar-item.jsx  sidebar.jsx  status-badge.jsx  symbol-card.jsx  theme-provider.jsx  time-since.jsx  user-avatar.jsx
components/providers/: user-provider.jsx  zustand-provider.jsx
components/ui/: dialog.jsx  sheet.jsx  switch.jsx  table.jsx
lib/: auth.js  db.js  stores.js  stripe.js  utils.js
lib/actions/: editMetrics.js
lib/hooks/: useDebounce.jsx  useLiveSymbolPrice.jsx  useTimeSince.jsx  useUser.jsx
lib/meta-api/: account.js  accounts.js  api.js  info.js  provisonal.js
meta-api/: account.py  notebook.ipynb  requirements.txt
prisma/: schema.prisma
server/: .gitignore  Spacefile  account.py  manage.py  pyproject.toml  requirements.txt
server/metaplanner/: asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
