[tool.poetry]
name = "meta-planner"
version = "0.1.0"
description = "Server for Meta Planner"
authors = ["ahmed <ahmadabdullah4919@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "meta_planner"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
