[tool.poetry]
name = "metaplanner-server"
version = "0.1.0"
description = ""
authors = ["ahmed <ahmadabdullah4919@gmail.com>"]
readme = "README.md"
packages = [{include = "metaplanner_server"}]

[tool.poetry.dependencies]
python = "^3.11"
metaapi-cloud-sdk = "^21.3.0"
django = "^4.2.4"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
